Add metrics and notification resource